[package]
name = "sdf-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
winit = "0.26"
cgmath = "0.18"
pollster = "0.2"
env_logger = "0.9"
bytemuck = { version = "1.7", features = [ "derive" ] }